# Cutting-Stock-Problem-2D-Genetic-Algorithm

./: CMakeLists.txt  FindGALIB.cmake  README.md
include/: CSGenome.hxx  ReadWriteManager.hxx  utilities.hxx
src/: CSGenome.cxx  ReadWriteManager.cxx  main.cxx  utilities.cxx
